# animal

./: .gitignore  README.md  pyproject.toml
src/animal/: __init__.py  animal.py  config.py
src/animal/extractors/: __init__.py  fast.py  local.py
src/animal/transforms/: __init__.py  blend.py  cinematic.py
src/animal/utils/: nrc_vad_lexicon.py  protocols.py  time_source.py
tests/: smoke.py
