[project]
name = "animal"
version = "0.0.1"
description = "Real-time continuous affect engine"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.2.0",
    "sentence-transformers>=5.2.0",
    "transformers>=5.1.0",
    "huggingface-hub>=1.4.0",
    "textstat>=0.7.3",
    "nltk>=3.8.1",
    "datasets>=2.0.0"
]

[project.optional-dependencies]
anchor = [
    "ollama>=0.1.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/animal"]

[dependency-groups]
dev = [
    "build>=1.4.0",
]
